--- a/src/components/GamerGust/styles.css
+++ b/src/components/GamerGust/styles.css
@@ -5,12 +5,6 @@
     justify-content: start;
     align-items: center;
 }
-.comandos {
-    padding-top: 10px;
-}
-.comandos img {
-    width: 60px;
-}
-.comandos img + img {
-    margin-left: 20px;
+div.img-gust img:hover {
+    cursor: not-allowed;
 }
