--- a/src/components/Game/styles.css
+++ b/src/components/Game/styles.css
@@ -8,12 +8,17 @@
 }
 .partidas {
     width: 100%;
-    height: 100%;
+    height: 85%;
+    padding: 20px;
     border: 1px solid #999;
+    overflow: auto;
 }
 .green {
     color: #07b607;
 }
 .red {
     color: #b31111;
+}
+.soft-black {
+    color: #666;
 }
